tests/interpreter/pass/102-remainder.hyg
assert(5 % 10 = 5);
assert(10 % 5 = 0)