tests/interpreter/fail/304-short_circuit.hyg
assert(false || false);
assert(false && true)